[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[lib]
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.7.0"
itertools = "0.10.5"
lazy_static = "1.4.0"